# remexec

./: .gitignore  README.md  pyproject.toml  ruff.toml
require/: common.txt  dev.txt
sources/: __init__.py  executor.py
testing/: connect.py
